# cartolex_user_app

./: .gitignore  MANIFEST.in  canvas_build_backend.py  cli.py  debug_api_call.py  debug_templates.py  env.json  pyproject.toml  requirements.txt  setup.cfg
api_metadata/: .gitkeep
canvas/: README.md  package-lock.json  package.json  vite.config.js
canvas/src/: App.tsx  index.tsx  types.ts
canvas/src/api/: client.ts  index.ts  serialization.ts  types.ts
canvas/src/components/: NodeContextMenu.tsx  NodeCreationMenu.tsx  NodeTypeIcon.tsx
canvas/src/edges/: index.ts
canvas/src/hooks/: useAutoSave.ts  useCanvasMenus.ts
canvas/src/nodes/: ActionNode.tsx  BasicNode.tsx  ConstraintNode.tsx  DataCollectionNode.tsx  FactNode.tsx  IdeaNode.tsx  NodeShell.tsx  QuestionNode.tsx  ThesisNode.tsx  UntypedNode.tsx  index.ts  registry.ts
canvas/src/store/: workspaceStore.ts
canvas/src/styles/: canvas.css
cartolex_user_app/: README.md  app.py  config.py  main.py  run.py
cartolex_user_app/routes/: __init__.py  canvas.py  dashboard.py  io_config.py  semantics.py  workflows.py
cartolex_user_app/scripts/: run.py  update_api_metadata.py
cartolex_user_app/services/: api_client.py
cartolex_user_app/static/: esevioz-theme.css
cartolex_user_app/static/canvas/: cartolex-canvas.js  style.css
cartolex_user_app/templates/: base.html  canvas.html  canvas_workspaces.html  dashboard.html
cartolex_user_app/templates/io/: create.html  edit.html  endpoint_configs.html  index.html
cartolex_user_app/templates/partials/: artifact_error.html  artifact_image.html  artifact_link.html  clone_error.html  (+36 more)
cartolex_user_app/utils/: flash_helpers.py  template_filters.py
config/: __init__.py  settings.py
docs/: adr_001_htmx_alpine_design_principles.md  adr_002_react_island_canvas_architecture.md  canvas_interactions.md
scripts/: run.py
tests/: conftest.py  test_routes_dashboard.py  test_routes_io_config.py  test_routes_semantics.py  test_routes_workflows.py  test_security.py
(+9 files in other folders)
