[metadata]
name = cartolex-user-app
version = 0.1.0
author = The First Esevioz Order
description = The web user app for the Cartolex project

[options]
packages = find:
include_package_data = True
install_requires =
    requests
    flask
    typer>=0.9.0
    rich>=13.0.0

[options.entry_points]
console_scripts =
    cartolex-user-app = cartolex_user_app.run:app

[options.packages.find]
exclude =
    tests
    docs