[metadata]
name = cartolex-user-app
version = 0.1.0
author = The First Esevioz Order
description = The web user app for the Cartolex project

[options]
packages = find:
include_package_data = True
install_requires =
    requests
    flask
    flask-wtf
    typer>=0.9.0
    rich>=13.0.0

[options.package_data]
cartolex_user_app = 
    templates/*.html
    templates/**/*.html
    static/*
    static/**/*

[options.entry_points]
console_scripts =
    cartolex-user-app = cartolex_user_app.scripts.run:app
    cartolex-update-api-metadata = cartolex_user_app.scripts.update_api_metadata:app

[options.packages.find]
exclude =
    tests
    docs